chore: cleanup repository - fix v2.0.0, archive old versions
- Move old test versions to .attic/
- Replace StartWithGithub.ps1 with fixed v2.0.0 version
- Fixes: Repository creation timing bug (GitHub repo created BEFORE git commit)
- Removes: Undefined variables and broken functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,18 @@
-# Git Ignore Configuration for ExecutionPolicy Foundation v2.0.0
-# GrEEV.com KG | support@greev.com
-
-# ============================================================
-# ARCHIVE & BACKUP FILES
-# ============================================================
+# Archived versions
 .attic/
-attic/
-*.bak
-*.backup
-*~
-*.tmp
 
-# ============================================================
-# DEVELOPMENT & IDE
-# ============================================================
+# Test/Debug files
+git_diff_output.txt
+*.patch
+*.tmp
+*.log
+*.bak
+*.swp
+
+# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-*.[oa]
-*.pyc
-__pycache__/
 
-# ============================================================
-# CREDENTIALS & SECRETS
-# ============================================================
-.env
-.env.local
-.env.*.local
-*.key
-*.pem
-secrets.json
-
-# ============================================================
-# SYSTEM FILES
-# ============================================================
+# OS
+Thumbs.db
 .DS_Store
-Thumbs.db
-*.lnk
-$RECYCLE.BIN/
-
-# ============================================================
-# TEST & BUILD ARTIFACTS
-# ============================================================
-test-results/
-coverage/
-dist/
-build/
-*.zip
-*.tar.gz
-
-# ============================================================
-# WINDOWS SPECIFIC
-# ============================================================
-*.lnk
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# ============================================================
-# POWERSHELL TEMP
-# ============================================================
-*.ps1xml
-*.pssc
